
for top_builddir in . .. ../.. $ac_auxdir $ac_auxdir/..; do
	test -f $top_builddir/configure && break
done

AC_INIT(libchumbhttpd,0.1)

LIBCHUMBHTTPD_NAME=libchumbyhttpd
ifdef([AC_DIVERSION_NOTICE],[AC_DIVERT_PUSH(AC_DIVERSION_NOTICE)],[AC_DIVERT_PUSH(NOTICE)])

LIBCHUMBHTTPD_MAJOR_VERSION=1
LIBCHUMBHTTPD_MINOR_VERSION=0
LIBCHUMBHTTPD_PATCH_VERSION=0
LIBCHUMBHTTPD_ADDED_VERSION=
LIBCHUMBHTTPD_VERSION=$LIBCHUMBHTTPD_MAJOR_VERSION.$LIBCHUMBHTTPD_MINOR_VERSION.$LIBCHUMBHTTPD_PATCH_VERSION$LIBCHUMBHTTPD_ADDED_VERSION

LIBCHUMBHTTPD_INTERFACE_AGE=0
LIBCHUMBHTTPD_BINARY_AGE=0

AC_DIVERT_POP()

AC_SUBST(LIBCHUMBHTTPD_NAME)
AC_SUBST(LIBCHUMBHTTPD_MAJOR_VERSION)
AC_SUBST(LIBCHUMBHTTPD_MINOR_VERSION)
AC_SUBST(LIBCHUMBHTTPD_PATCH_VERSION)
AC_SUBST(LIBCHUMBHTTPD_VERSION)
AC_SUBST(LIBCHUMBHTTPD_INTERFACE_AGE)
AC_SUBST(LIBCHUMBHTTPD_BINARY_AGE)

LT_RELEASE=$LIBCHUMBHTTPD_MAJOR_VERSION.$LIBCHUMBHTTPD_MINOR_VERSION
LT_CURRENT=`expr $LIBCHUMBHTTPD_PATCH_VERSION - $LIBCHUMBHTTPD_INTERFACE_AGE`
LT_REVISION=$LIBCHUMBHTTPD_INTERFACE_AGE
LT_AGE=`expr $LIBCHUMBHTTPD_BINARY_AGE - $LIBCHUMBHTTPD_INTERFACE_AGE`
AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

VERSION=$LIBCHUMBHTTPD_VERSION
PACKAGE=$LIBCHUMBHTTPD_NAME

LIBCHUMBHTTPD_FULLNAME=$LIBCHUMBHTTPD_NAME-$LIBCHUMBHTTPD_VERION
AC_SUBST(LIBCHUMBHTTPD_FULLNAME)

AC_DEFINE_UNQUOTED(_LIBCHUMBHTTPD_NAME		"$LIBCHUMBHTTPD_NAME")
AC_DEFINE_UNQUOTED(_LIBCHUMBHTTPD_VERSION		"$LIBCHUMBHTTPD_VERSION")
AC_DEFINE_UNQUOTED(_LIBCHUMBHTTPD_FULLNAME		"$LIBCHUMBHTTPD_FULLNAME")
AC_DEFINE_UNQUOTED(_LIBCHUMBHTTPD_MAJOR_VERSION	$LIBCHUMBHTTPD_MAJOR_VERSION)
AC_DEFINE_UNQUOTED(_LIBCHUMBHTTPD_MINOR_VERSION	$LIBCHUMBHTTPD_MINOR_VERSION)
AC_DEFINE_UNQUOTED(_LIBCHUMBHTTPD_PATCH_VERSION	$LIBCHUMBHTTPD_PATCH_VERSION)
AC_DEFINE_UNQUOTED(_LIBCHUMBHTTPD_INTERFACE_AGE	$LIBCHUMBHTTPD_INTERFACE_AGE)
AC_DEFINE_UNQUOTED(_LIBCHUMBHTTPD_BINARY_AGE		$LIBCHUMBHTTPD_BINARY_AGE)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AM_MAINTAINER_MODE

AC_CANONICAL_HOST
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL
AC_C_BIGENDIAN

AC_HEADER_STDC
AC_CHECK_HEADERS(sys/stat.h)

AC_LANG_SAVE
AC_LANG_CPLUSPLUS
AC_LANG_RESTORE

dnl AC_PROG_RANLIB
AC_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)
AC_CONFIG_FILES([
	Makefile
	src/Makefile
	include/Makefile
	include/chumby_httpd/Makefile
	examples/Makefile
	])
AC_OUTPUT
